--- a/style.css
+++ b/style.css
@@ -4,3 +4,7 @@
  Description:  This is the first theme created by Flo, a child theme of WordPress' Twenty Sixteen theme
  Template:     twentysixteen
 */
+
+.home-entry-content {
+  color:red;
+}
