made a global template and updated the names of two template files

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
  Template:     twentysixteen
 */
 
-.home-entry-content {
+.home .entry-content {
   color:red;
+}
+
+.page-template-template-teampage .site-main {
+  background-color: green;
 }
